Fix water dropdown visibility

--- a/client/src/components/PlantModal/style.scss
+++ b/client/src/components/PlantModal/style.scss
@@ -57,7 +57,6 @@
             position: relative;
             border-top-left-radius: inherit;
             border-top-right-radius: inherit;
-            overflow-y: hidden;
         }
 
         .close-button {
@@ -105,6 +104,8 @@
             max-height: 50vh;
             object-fit: cover;
             height: auto;
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
 
             &-overlay {
                 display: flex;
